Make test pass with java 17